...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="400dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/select_dates_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edit"
            android:drawableStart="@drawable/ic_baseline_date_range_24"
            android:drawablePadding="12dp"
            android:ems="10"
...
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <EditText
            android:id="@+id/departure_city_edit_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edit"
            android:drawableStart="@drawable/ic_baseline_flight_takeoff_24"
            android:drawablePadding="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/departure_city_edit" />

        <EditText
            android:id="@+id/arrival_city_edit_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit"
            android:drawableStart="@drawable/ic_baseline_flight_land_24"
            android:drawablePadding="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/arrival_city_edit" />
    </LinearLayout>

    <Button
        android:id="@+id/search_flights_bttn_id"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_button"
        android:onClick="searchFlights"
        android:text="@string/search_flights_bttn"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="210dp"
        android:layout_height="115dp"
        android:layout_marginStart="40dp"
...
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/adult_checkbox_id"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="adultTravelOption"
                android:text="@string/adult_checkbox"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/adult_num_edit_id"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/custom_edit"
                android:ems="10"
                android:inputType="number"
...
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/child_checkbox_id"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="childrenTravelOption"
                android:text="@string/children_checkbox"
                android:textSize="15sp" />
...
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_res_bttn_id">

        <Switch
            android:id="@+id/select_trip_type_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:clickable="false"
            android:onClick="selectTripType"
...
