...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ReservationFormActivity">

    <TextView
        android:id="@+id/flight_info_txtview_id"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:text="Flight Summary For"
        android:textSize="20sp"
        android:textStyle="bold"
...
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:paddingStart="20dp"
            android:text="Departure Time" />

        <TextView
            android:id="@+id/dep_city_txt_id"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:paddingLeft="20dp"
            android:text="Departure City" />

        <TextView
...
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:paddingLeft="20dp"
            android:text="Return Time" />

        <TextView
            android:id="@+id/return_city_txt_id"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:paddingLeft="20dp"
            android:text="Return City" />

        <TextView
...
            android:layout_height="wrap_content"
            android:text="Enter your information"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/form_name_edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/form_email_edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="12dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/form_save_bttn_id"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:onClick="saveForm"
        android:text="Save"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
