...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="292dp">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
...
                        android:layout_height="wrap_content"
                        android:text="4:55p"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dep_city1_txt_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="YWG"
                        android:textSize="18sp" />

                </LinearLayout>
...
                        android:layout_height="wrap_content"
                        android:text="8:20"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dep_city2_txt_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="YVR"
                        android:textSize="18sp" />
                </LinearLayout>

...
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!--                    android:background="@drawable/custom_button"-->
                <Button
                    android:id="@+id/button"
                    android:layout_width="70dp"
                    android:layout_height="67dp"
                    android:layout_weight="1"
                    android:text="Reserve"
                    app:cornerRadius="10dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
